--- a/index.html
+++ b/index.html
@@ -353,7 +353,10 @@
 </form>
     </section>
   </body>
-  <footer class="border-top py-3 my-4"> </div></footer>
+  <div class="container">
+      <footer class="border-top py-3 my-4"> </div></footer>
+  </div>
+
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
