--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
   <input required type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
 </div>
 <div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label" name="message">Message</label>
-  <textarea required class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  <label for="Textarea1" class="form-label" name="message">Message</label>
+  <textarea required class="form-control" id="Textarea1" rows="3" placeholder="Your message here..."></textarea>
 </div>
 <div class="row g-3">
   <div class="col">
@@ -326,7 +326,7 @@
     <input type="text" required class="form-control" placeholder="Last name" aria-label="Last name" name="lastname">
   </div>
  </div>  
-  <button type="submit" class="btn btn-primary  d-none"  name="send">Send</button>
+  <button type="submit" class="btn btn-primary  d-none">Send</button>
  <!-- Button trigger modal -->
 <button id="button-send" type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal">
   SEND
@@ -345,7 +345,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary  text-light" name="send">Save changes</button>
+        <button type="submit" class="btn btn-primary  text-light" >Save changes</button>
       </div>
     </div>
   </div>
@@ -354,9 +354,18 @@
     </section>
   </body>
   <div class="container">
-      <footer class="border-top py-3 my-4"> </div></footer>
+      <footer class="border-top py-3 my-4">
+        <div class="col-md-4 d-flex align-items-center">
+          <span class="text-muted">© 2022 Fasp, Inc</span>
+        </div>
+        <div class="col-md-4 d-flex ">
+           <span class="text-muted">Created by Ricardo Moses</span>
+        </div>
+        
+      </footer>
   </div>
 
+  <script src="https://kit.fontawesome.com/53a149f81a.js" crossorigin="anonymous"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
