--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="col-md-6">
           <div class="container-fluid">
             <div class="row">
-              <div class="col d-flex flex-wrap-md">
+              <div class="col">
                 <img
                   class="rounded img-fluid"
                   src="./images/Ricardo (2).jpg"
