Responsify about section

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <div class="col-md-6">
           <div class="container-fluid">
             <div class="row">
-              <div class="col">
+              <div class="col-md-6">
                 <img
                   class="rounded img-fluid"
                   src="./images/Ricardo (2).jpg"
                   alt="Ricardo Moses"
                 />
               </div>
-              <div class="col">
+              <div class="col-md-6">
                 <div class="d-flex flex-column justify-content-between">
                   <p><span class="fw-bold">Name:</span>Ricardo Moses</p>
                   <p>
