send message on contact form

--- a/index.html
+++ b/index.html
@@ -311,11 +311,11 @@
 >
 <div class="mb-3">
   <label for="exampleFormControlInput1" class="form-label" name="email">Email address</label>
-  <input required type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  <input required type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="name@example.com">
 </div>
 <div class="mb-3">
   <label for="Textarea1" class="form-label" name="message">Message</label>
-  <textarea required class="form-control" id="Textarea1" rows="3" placeholder="Your message here..."></textarea>
+  <textarea required class="form-control" id="Textarea1" rows="3" name="message" placeholder="Your message here..."></textarea>
 </div>
 <div class="row g-3">
   <div class="col">
