--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body class="bg-dark">
     <section id="landing">
-      <h1>I am Ricardo Moses</h1>
-      <h2>Web Developer</h2>
+      <h1 class="font-monospace fs-1">I am Ricardo Moses</h1>
+      <h2  class="font-monospace fs-2">Web Developer</h2>
     </section>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
