--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./styles.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio 3.0</title>
   </head>
   <body class="bg-dark">
+
+    <!-- LANDING -->
     <section id="landing">
       <h1 class="font-monospace fs-1">I am Ricardo Moses</h1>
       <h2  class="font-monospace fs-2">Web Developer</h2>
     </section>
+
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">Flow And Stay Positive</a>
@@ -53,7 +59,9 @@
         </div>
       </div>
     </nav>
-    <section id="about" class="container bg-secondary  mt-3 p-5 shadow-md">
+
+    <!-- ABOUT -->
+    <section id="about" class="container bg-secondary  mt-3 p-5 shadow-md " data-aos="fade-right">
       <div class="row">
         <div class="col-md-6">
           <div class="container-fluid">
@@ -122,10 +130,11 @@
                 aria-valuemin="0"
                 aria-valuemax="100"
               ></div>
+              
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div  class="col-md-6">
           <h2 class="mt-3">About Me</h2>
           <p class="lead">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
@@ -152,8 +161,9 @@
       </div>
     </section>
 
-    <section id="resume"  class="container bg-secondary mt-3 p-5">
-      <div class="container aos-init aos-animate" data-aos="fade-up">
+<!-- RESUME -->
+    <section id="resume"  class="container bg-secondary mt-3 p-5"  data-aos="fade-left">
+      <div class="container">
         <div class="section-title">
           <h2 class="d-flex justify-content-center">Resume</h2>
           <p class="d-flex justify-content-center">
@@ -185,10 +195,10 @@
 			</ul>
 		</div>
 	
-         <div class="col-lg-6">
+         <div class="col-lg-6 mt-5 mb-5">
            	<ul class="timeline"> 
      <li> <h4 class="text-primary">Professional Experience</h4></li>
-           <p> Lorem ipsum dolor sit.</p>
+           <p class="offset-md-1"> Lorem ipsum dolor sit.</p>
            <ul>
              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.</li>
               <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.</li>
@@ -198,16 +208,18 @@
              <li>
            <h4 class="text-primary">Graphic Design</h4>
            </li>    
-           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta totam pariatur velit nihil voluptates. Laudantium officiis alias ex deserunt expedita distinctio natus rem excepturi ab inventore nihil, a adipisci dolorum!</p>
+           <p  class="offset-md-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta totam pariatur velit nihil voluptates. Laudantium officiis alias ex deserunt expedita distinctio natus rem excepturi ab inventore nihil, a adipisci dolorum!</p>
 </ul>
 
 
-             </div></div>
+             </div>
+            </div>
  
 </div>
 </section>
 
-    <section id="projects"  class="container bg-secondary mt-3 p-5" >
+<!-- PROJECTS -->
+    <section id="projects"  class="container bg-secondary mt-3 p-5"  data-aos="fade-right" >
       <h2 class="text-center">Projects</h2>
       
         <div class="conatiner d-flex text-center flex-column ">
@@ -241,7 +253,9 @@
         </div>
       </div>
     </section>
-    <section id="testimonials"  class="container bg-secondary  mt-3 p-5">
+
+    <!-- TESTIMONIALS -->
+    <section id="testimonials"  class="container bg-secondary  mt-3 p-5"  data-aos="fade-left">
       <h2 class="text-center">Testimonials</h2>
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -302,8 +316,8 @@
 
     </section>
 
-
-    <section id="contact" class="container bg-secondary mt-3 p-5">
+<!-- CONTACT -->
+    <section id="contact" class="container bg-secondary mt-3 p-5"  data-aos="fade-right">
       <h1 class="text-center">Contact</h1>  
 <form
   action="https://formspree.io/f/xnqwogak"
@@ -353,8 +367,8 @@
 </form>
     </section>
   </body>
-  <div class="container">
-      <footer class="border-top py-3 my-4">
+  <div class="container" >
+      <footer class="border-top py-3 my-4" >
         <div class="col-md-4 d-flex align-items-center">
           <span class="text-muted">© 2022 Fasp, Inc</span>
         </div>
@@ -365,6 +379,10 @@
       </footer>
   </div>
 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+  AOS.init();
+</script>
   <script src="https://kit.fontawesome.com/53a149f81a.js" crossorigin="anonymous"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
