--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <section id="landing">
       <h1 class="font-monospace fs-1">I am Ricardo Moses</h1>
       <h2  class="font-monospace fs-2">Web Developer</h2>
+      <a href="#about" class="btn-get-started scrollto">    <i class="fa-solid fa-computer-mouse-scrollwheel"></i></a>
     </section>
 
     <!-- NAVBAR -->
@@ -61,7 +62,7 @@
     </nav>
 
     <!-- ABOUT -->
-    <section id="about" class="container bg-secondary  mt-3 p-5 shadow-md " data-aos="fade-right">
+     <section id="about" class="container bg-secondary  mt-3 p-5 shadow-md" data-aos="fade-right">
       <div class="row">
         <div class="col-md-6">
           <div class="container-fluid">
@@ -135,7 +136,7 @@
           </div>
         </div>
         <div  class="col-md-6">
-          <h2 class="mt-3">About Me</h2>
+          <h2>About Me</h2>
           <p class="lead">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
             architecto quisquam aperiam doloribus reiciendis voluptates ex
@@ -222,7 +223,7 @@
     <section id="projects"  class="container bg-secondary mt-3 p-5"  data-aos="fade-right" >
       <h2 class="text-center">Projects</h2>
       
-        <div class="conatiner d-flex text-center flex-column ">
+        <div class="conatiner">
         <div>
             <h4 class="title">
           Holiday destination
@@ -327,19 +328,20 @@
   <label for="exampleFormControlInput1" class="form-label" name="email">Email address</label>
   <input required type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="name@example.com">
 </div>
-<div class="mb-3">
-  <label for="Textarea1" class="form-label" name="message">Message</label>
-  <textarea required class="form-control" id="Textarea1" rows="3" name="message" placeholder="Your message here..."></textarea>
-</div>
 <div class="row g-3">
   <div class="col">
     <input type="text"
-     required class="form-control mb-5" placeholder="First name" aria-label="First name" name="firstname">
+     required class="form-control mb-3" placeholder="First name" aria-label="First name" name="firstname">
   </div>
   <div class="col">
     <input type="text" required class="form-control" placeholder="Last name" aria-label="Last name" name="lastname">
   </div>
  </div>  
+<div class="mb-3">
+  <label for="Textarea1" class="form-label" name="message">Message</label>
+  <textarea required class="form-control" id="Textarea1" rows="3" name="message" placeholder="Your message here..."></textarea>
+</div>
+
   <button type="submit" class="btn btn-primary  d-none">Send</button>
  <!-- Button trigger modal -->
 <button id="button-send" type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -369,7 +371,7 @@
   </body>
   <div class="container" >
       <footer class="border-top py-3 my-4" >
-        <div class="col-md-4 d-flex align-items-center">
+        <div class="col-md-4 d-flex align-items-center">  
           <span class="text-muted">© 2022 Fasp, Inc</span>
         </div>
         <div class="col-md-4 d-flex ">
@@ -378,7 +380,7 @@
         
       </footer>
   </div>
-
+<script src="https://kit.fontawesome.com/53a149f81a.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
   AOS.init();
